--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -87,3 +87,12 @@ ultralytics==8.1.34
 urllib3==2.2.1
 uvicorn==0.29.0
 websockets==11.0.3
+autopep8==2.0.4
+blinker==1.7.0
+click==8.1.7
+Flask==3.0.2
+Flask-Cors==4.0.0
+itsdangerous==2.1.2
+mysql-connector-python==8.3.0
+pycodestyle==2.11.1
+Werkzeug==3.0.1
