--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,18 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# project one ignore unnecessary/heavy files
+
+# Ignore the runs folder
+runs/
+
+# Ignore the facerecognition-2 folder
+facerecognition-2/
+
+# Ignore the dataset folder
+dataset/
+
+# Ignore specific files
+yolov8n.pt
+yolov8s-cls.pt
